--- a/sounds/style.css
+++ b/sounds/style.css
@@ -41,6 +41,7 @@ img {
    background-size: cover;
    height: 60px;
    width: 60px;
+   cursor: pointer;
 }
 .header-logo:hover {
    transition: 0.3s;
@@ -57,7 +58,7 @@ img {
 li {
    cursor: pointer;
    list-style: none;
-   padding: 0 10px;
+   padding: 0 15px;
 }
 li:hover {
    color: #BDAE82;
@@ -102,6 +103,7 @@ li:hover {
    padding: 0 10px;
 }
 .footer-right {
+   display: block;
    background-image: url(./assets/svg/rss.svg);
    background-size: cover;
    height: 60px;
@@ -120,4 +122,8 @@ li:hover {
    cursor: pointer;
    background-color: transparent; 
    border: none;
+}
+.active {
+   color: #BDAE82;
+   filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
 }
